--- a/text_main_0.296_94.5
+++ b/text_main_0.296_94.5
@@ -1,200 +1,200 @@
 Rotation: 1
      True
-     Current_mottor: 0.617138683795929
-     Position: 95.99632263183594
+     Current_mottor: 0.5728277564048767
+     Position: 94.15119934082031
 Rotation: 2
      True
-     Current_mottor: 0.6598432660102844
-     Position: 96.28254699707031
+     Current_mottor: 0.45842352509498596
+     Position: 93.55107879638672
 Rotation: 3
      True
-     Current_mottor: 0.6203634142875671
-     Position: 95.3343505859375
+     Current_mottor: 0.42539140582084656
+     Position: 92.86888122558594
 Rotation: 4
      True
-     Current_mottor: 0.6276169419288635
-     Position: 96.49413299560547
+     Current_mottor: 0.5083746314048767
+     Position: 93.76789855957031
 Rotation: 5
      True
-     Current_mottor: 0.6727299690246582
-     Position: 96.52308654785156
+     Current_mottor: 0.5269049406051636
+     Position: 94.92268371582031
 Rotation: 6
      True
-     Current_mottor: 0.5825223922729492
-     Position: 95.31539916992188
+     Current_mottor: 0.6187583804130554
+     Position: 96.37159729003906
 Rotation: 7
      True
-     Current_mottor: 0.5776616930961609
-     Position: 95.0687026977539
+     Current_mottor: 0.6082763671875
+     Position: 96.25789642333984
 Rotation: 8
      True
-     Current_mottor: 0.5816900134086609
-     Position: 95.10346221923828
+     Current_mottor: 0.5365777015686035
+     Position: 94.25780487060547
 Rotation: 9
      True
-     Current_mottor: 0.5696044564247131
-     Position: 94.25211334228516
+     Current_mottor: 0.5470482707023621
+     Position: 95.50733947753906
 Rotation: 10
      True
-     Current_mottor: 0.6171392202377319
-     Position: 96.48995208740234
+     Current_mottor: 0.43828198313713074
+     Position: 92.77935791015625
 Rotation: 11
      True
-     Current_mottor: 0.607470691204071
-     Position: 95.32644653320312
+     Current_mottor: 0.5260986089706421
+     Position: 93.93519592285156
 Rotation: 12
      True
-     Current_mottor: 0.619556188583374
-     Position: 96.49053192138672
+     Current_mottor: 0.580078661441803
+     Position: 94.76317596435547
 Rotation: 13
      True
-     Current_mottor: 0.5937743782997131
-     Position: 95.4144515991211
+     Current_mottor: 0.40283283591270447
+     Position: 92.82540130615234
 Rotation: 14
      True
-     Current_mottor: 0.5438232421875
-     Position: 94.34546661376953
+     Current_mottor: 0.578471839427948
+     Position: 95.0906753540039
 Rotation: 15
      True
-     Current_mottor: 0.5824950933456421
-     Position: 95.11206817626953
+     Current_mottor: 0.556713879108429
+     Position: 95.29296112060547
 Rotation: 16
      True
-     Current_mottor: 0.6558110117912292
-     Position: 96.53238677978516
+     Current_mottor: 0.5446295142173767
+     Position: 94.2459487915039
 Rotation: 17
      True
-     Current_mottor: 0.6461430788040161
-     Position: 96.41682434082031
+     Current_mottor: 0.5470482707023621
+     Position: 94.94046783447266
 Rotation: 18
      True
-     Current_mottor: 0.5252935886383057
-     Position: 94.33802795410156
+     Current_mottor: 0.48662176728248596
+     Position: 92.57474517822266
 Rotation: 19
      True
-     Current_mottor: 0.6300297975540161
-     Position: 95.39363861083984
+     Current_mottor: 0.5816984176635742
+     Position: 95.07079315185547
 Rotation: 20
      True
-     Current_mottor: 0.587329626083374
-     Position: 94.1600341796875
+     Current_mottor: 0.5244879126548767
+     Position: 93.85543823242188
 Rotation: 21
      True
-     Current_mottor: 0.620361328125
-     Position: 95.37434387207031
+     Current_mottor: 0.4882350564002991
+     Position: 94.1336441040039
 Rotation: 22
-     False
-     Current_mottor: 0.5381841659545898
-     Position: 95.46723175048828
+     True
+     Current_mottor: 0.5696095824241638
+     Position: 95.61383056640625
 Rotation: 23
      True
-     Current_mottor: 0.613918125629425
-     Position: 95.53431701660156
+     Current_mottor: 0.6082763671875
+     Position: 96.3988037109375
 Rotation: 24
      True
-     Current_mottor: 0.6074840426445007
-     Position: 95.21832275390625
+     Current_mottor: 0.5172369480133057
+     Position: 95.15752410888672
 Rotation: 25
      True
-     Current_mottor: 0.649365246295929
-     Position: 96.27591705322266
+     Current_mottor: 0.592163622379303
+     Position: 95.89715576171875
 Rotation: 26
      True
-     Current_mottor: 0.6662861108779907
-     Position: 96.56168365478516
+     Current_mottor: 0.443126916885376
+     Position: 92.88224792480469
 Rotation: 27
      True
-     Current_mottor: 0.587329626083374
-     Position: 95.45246887207031
+     Current_mottor: 0.49709534645080566
+     Position: 94.19409942626953
 Rotation: 28
      True
-     Current_mottor: 0.5816900134086609
-     Position: 95.41898345947266
+     Current_mottor: 0.5277124047279358
+     Position: 93.98797607421875
 Rotation: 29
      True
-     Current_mottor: 0.627612829208374
-     Position: 96.36183166503906
+     Current_mottor: 0.5591314435005188
+     Position: 95.16647338867188
 Rotation: 30
      True
-     Current_mottor: 0.500317394733429
-     Position: 93.05152130126953
+     Current_mottor: 0.49226072430610657
+     Position: 95.1410140991211
 Rotation: 31
      True
-     Current_mottor: 0.5961962938308716
-     Position: 96.24999237060547
+     Current_mottor: 0.5325536727905273
+     Position: 95.48944091796875
 Rotation: 32
      True
-     Current_mottor: 0.5502709150314331
-     Position: 95.15879821777344
+     Current_mottor: 0.5365819334983826
+     Position: 95.03765869140625
 Rotation: 33
      True
-     Current_mottor: 0.558346152305603
-     Position: 95.19693756103516
+     Current_mottor: 0.5381860136985779
+     Position: 95.0457992553711
 Rotation: 34
      True
-     Current_mottor: 0.6010259389877319
-     Position: 96.48402404785156
+     Current_mottor: 0.4898443818092346
+     Position: 93.97064971923828
 Rotation: 35
-     False
-     Current_mottor: 0.5655784606933594
-     Position: 95.19390869140625
+     True
+     Current_mottor: 0.41008299589157104
+     Position: 92.75296783447266
 Rotation: 36
      True
-     Current_mottor: 0.647758424282074
-     Position: 95.40340423583984
+     Current_mottor: 0.49145570397377014
+     Position: 93.7713851928711
 Rotation: 37
      True
-     Current_mottor: 0.5945805907249451
-     Position: 96.50041198730469
+     Current_mottor: 0.508374035358429
+     Position: 93.77824401855469
 Rotation: 38
      True
-     Current_mottor: 0.6058593392372131
-     Position: 95.11160278320312
+     Current_mottor: 0.5164331793785095
+     Position: 94.8285140991211
 Rotation: 39
      True
-     Current_mottor: 0.5526878833770752
-     Position: 94.00948333740234
+     Current_mottor: 0.5599371194839478
+     Position: 95.08497619628906
 Rotation: 40
      True
-     Current_mottor: 0.5559087991714478
-     Position: 94.00553131103516
+     Current_mottor: 0.512402355670929
+     Position: 94.20606994628906
 Rotation: 41
      True
-     Current_mottor: 0.6300313472747803
-     Position: 95.35992431640625
+     Current_mottor: 0.4890380799770355
+     Position: 93.97216033935547
 Rotation: 42
      True
-     Current_mottor: 0.6187505125999451
-     Position: 96.63573455810547
+     Current_mottor: 0.4390869140625
+     Position: 92.8001708984375
 Rotation: 43
      True
-     Current_mottor: 0.5470482707023621
-     Position: 95.18426513671875
+     Current_mottor: 0.4882384240627289
+     Position: 95.00813293457031
 Rotation: 44
      True
-     Current_mottor: 0.5953906774520874
-     Position: 94.13004302978516
+     Current_mottor: 0.5712209343910217
+     Position: 96.4432144165039
 Rotation: 45
      True
-     Current_mottor: 0.5736333727836609
-     Position: 95.14159393310547
+     Current_mottor: 0.5075709223747253
+     Position: 94.24954986572266
 Rotation: 46
      True
-     Current_mottor: 0.6437260508537292
-     Position: 96.49297332763672
+     Current_mottor: 0.6002218723297119
+     Position: 96.25604248046875
 Rotation: 47
      True
-     Current_mottor: 0.5905539393424988
-     Position: 94.39045715332031
+     Current_mottor: 0.4874327480792999
+     Position: 95.00859832763672
 Rotation: 48
      True
-     Current_mottor: 0.5704101324081421
-     Position: 93.97483825683594
+     Current_mottor: 0.4858161211013794
+     Position: 95.10985565185547
 Rotation: 49
      True
-     Current_mottor: 0.530932605266571
-     Position: 94.11225128173828
+     Current_mottor: 0.4979003965854645
+     Position: 94.0941162109375
 Rotation: 50
      True
-     Current_mottor: 0.6711225509643555
-     Position: 96.5213394165039
+     Current_mottor: 0.47856512665748596
+     Position: 93.93077850341797
